refactor: update AutoRegister AP to java 25